GNOME Bugzilla – Bug 708616
Theme previews are not displayed
Last modified: 2013-09-24 15:07:30 UTC
For most themes I do not get any preview in the Preferences dialog; for a few of them the background changes (when it is set to an image, noteboard, pushpin, pushpin vintage, etc.). This is empathy from git and WebKit 2.1.92.
I can reproduce. Reverting c2e916b doesn't help so it's more likely a WebKit issue.
Actually it's because of https://git.gnome.org/browse/empathy/commit/?id=19e784a4b2655db5cf414c7ce43662a9adb9d0c6 (thanks git bisect!). Fix on the way.
Created attachment 255635 [details] [review] theme-adium: still execute the start of the script if ressource is missing This fix a regression introduced by 19e784a4b2655db5cf414c7ce43662a9adb9d0c6. If empathy-chat.js can't be find (like in the preferences dialog) we still want to execute the start of the script.
+1
Attachment 255635 [details] pushed as b205d66 - theme-adium: still execute the start of the script if ressource is missing