theme-adium: still execute the start of the script if ressource is missing

This fix a regression introduced by 19e784a4b2655db5cf414c7ce43662a9adb9d0c6.

If empathy-chat.js can't be find (like in the preferences dialog) we still
want to execute the start of the script.

https://bugzilla.gnome.org/show_bug.cgi?id=708616